--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "livewire/livewire": "^2.10",
         "picqer/php-barcode-generator": "^2.2",
         "rap2hpoutre/fast-excel": "^5.1",
+        "symfony/http-client": "^7.1",
+        "symfony/mailgun-mailer": "^7.1",
         "teamtnt/laravel-scout-tntsearch-driver": "^12.1"
     },
     "require-dev": {
