--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.5",
         "intervention/image": "^2.7",
         "kalnoy/nestedset": "^6.0",
+        "laravel-notification-channels/webpush": "^9.0",
         "laravel/breeze": "1.9.2",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
