--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "livewire/livewire": "^2.10",
         "nyholm/psr7": "^1.8",
         "picqer/php-barcode-generator": "^2.2",
+        "predis/predis": "^2.3",
         "railsware/mailtrap-php": "^1.9",
         "rap2hpoutre/fast-excel": "^5.1",
         "symfony/http-client": "^7.1",
